--- a/contrib/charts/09_pbr_ph.yaml
+++ b/contrib/charts/09_pbr_ph.yaml
@@ -1,10 +1,10 @@
 ---
-chart_key: pbr_ph
+chart_key: pbrph
 data_source: pbr_ph # SQL table
+data_source_column: pbr_ph_ph
 title: PhotoBioReactor pH
 mqtt_topic: read_pbr_ph/PBR_pH
 source: app
-payload_key: ph
 y_axis_label: pH
 interpolation: stepAfter
 y_axis_domain: [0, 14]
