--- a/contrib/charts/08_pbr_temp.yaml
+++ b/contrib/charts/08_pbr_temp.yaml
@@ -5,6 +5,7 @@ data_source_column: pbr_temperature_c
 title: PhotoBioReactor Temperature
 mqtt_topic: read_pbr_temp/PBR_temp
 source: app
+payload_key: temperature
 y_axis_label: temperature, ℃
 interpolation: stepAfter
 y_axis_domain: [22.5, 50]
