--- a/contrib/charts/09_pbr_ph.yaml
+++ b/contrib/charts/09_pbr_ph.yaml
@@ -5,6 +5,7 @@ data_source_column: pbr_ph_ph
 title: PhotoBioReactor pH
 mqtt_topic: read_pbr_ph/PBR_pH
 source: app
+payload_key: pH
 y_axis_label: pH
 interpolation: stepAfter
 y_axis_domain: [0, 14]
