--- a/contrib/charts/02_temperature.yaml
+++ b/contrib/charts/02_temperature.yaml
@@ -1,7 +1,8 @@
 ---
 chart_key: temperature
 data_source: temperature_readings # SQL table
-title: Temperature of vials
+data_source_column: temperature_c
+title: Temperature of vessel
 mqtt_topic: temperature_automation/temperature
 source: app
 payload_key: temperature
